# Gamma-Game

./: CMakeLists.txt  README.md  batch.h  find_union.c  find_union.h  gamma.h  gamma_main.c
src/: batch.c  gamma.c  gamma_test.c  inter.c  inter.h
